# msvc-demangler-rust

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: msvc-demangle.rs
src/: lib.rs  main.rs
tests/: test_basics.rs  test_llvm.rs
tests/llvm-cases/: ms-back-references.test  ms-basic.test  ms-cxx11.test  ms-operators.test
